Implemented JWT auth

--- a/src/NBsoft.Wordzz/appsettings.Development.json
+++ b/src/NBsoft.Wordzz/appsettings.Development.json
@@ -11,9 +11,10 @@
     "EncryptionKey": "90E7D584-31F4-4099-8180-0E44B2B72CA3",
     "ServerId": "localnemdevserver",
     "Db": {
-      "LogConnString": "Server=db;Port=3306;Uid=root;Pwd=chaosKitten_69;Database=nbsoftinvxpress",
-      "MainConnString": "Server=db;Port=3306;Uid=root;Pwd=chaosKitten_69;Database=nbsoftinvxpress;",
-      "SessionConnString": "Server=db;Port=3306;Uid=root;Pwd=chaosKitten_69;Database=nbsoftinvxpress;"
+      "DbType": "MySql",
+      "LogConnString": "Server=192.168.0.15;Port=3306;Uid=root;Pwd=na123456;Database=nbsoftwordzz",
+      "MainConnString": "Server=192.168.0.15;Port=3306;Uid=root;Pwd=na123456;Database=nbsoftwordzz;",
+      "SessionConnString": "Server=192.168.0.15;Port=3306;Uid=root;Pwd=na123456;Database=nbsoftwordzz;"
     }
   }
 }
