--- a/src/NBsoft.Wordzz/appsettings.json
+++ b/src/NBsoft.Wordzz/appsettings.json
@@ -12,6 +12,7 @@
     "EncryptionKey": "",
     "ServerId": "",
     "Db": {
+      "DbType": "",
       "LogConnString": "",
       "MainConnString": "",
       "SessionConnString": ""
