--- a/src/NBsoft.Wordzz.Contracts/NBsoft.Wordzz.Contracts.csproj
+++ b/src/NBsoft.Wordzz.Contracts/NBsoft.Wordzz.Contracts.csproj
@@ -17,4 +17,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Refit" Version="5.1.67" />
+  </ItemGroup>
+
 </Project>
