Implementing game service and hub

--- a/src/NBsoft.Wordzz/appsettings.Development.json
+++ b/src/NBsoft.Wordzz/appsettings.Development.json
@@ -12,9 +12,9 @@
     "ServerId": "localnemdevserver",
     "Db": {
       "DbType": "MySql",
-      "LogConnString": "Server=192.168.0.15;Port=3306;Uid=root;Pwd=na123456;Database=nbsoftwordzz",
-      "MainConnString": "Server=192.168.0.15;Port=3306;Uid=root;Pwd=na123456;Database=nbsoftwordzz;",
-      "SessionConnString": "Server=192.168.0.15;Port=3306;Uid=root;Pwd=na123456;Database=nbsoftwordzz;"
+      "LogConnString": "Server=HADES;Port=3306;Uid=root;Pwd=na123456;Database=nbsoftwordzz",
+      "MainConnString": "Server=HADES;Port=3306;Uid=root;Pwd=na123456;Database=nbsoftwordzz;",
+      "SessionConnString": "Server=HADES;Port=3306;Uid=root;Pwd=na123456;Database=nbsoftwordzz;"
     }
   }
 }
