--- a/src/NBsoft.Wordzz/NBsoft.Wordzz.csproj
+++ b/src/NBsoft.Wordzz/NBsoft.Wordzz.csproj
@@ -21,5 +21,7 @@
     <ProjectReference Include="..\NBsoft.Wordzz.Contracts\NBsoft.Wordzz.Contracts.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1development_1json__JsonSchema="http://json.schemastore.org/appsscript" /></VisualStudio></ProjectExtensions>
+
 
 </Project>
