Implementing game service

--- a/src/NBsoft.Wordzz/appsettings.Development.json
+++ b/src/NBsoft.Wordzz/appsettings.Development.json
@@ -10,6 +10,9 @@
     "ApiKey": "localWordzzSrv",
     "EncryptionKey": "90E7D584-31F4-4099-8180-0E44B2B72CA3",
     "ServerId": "localnemdevserver",
+    "DictionaryApiUrl": "https://od-api.oxforddictionaries.com/api/v2",
+    "DictionaryApiAppId": "1bc24224",
+    "DictionaryApiKey": "0b99529816f386c8a9ff589fb27fe74a",
     "Db": {
       "DbType": "MySql",
       "LogConnString": "Server=HADES;Port=3306;Uid=root;Pwd=na123456;Database=nbsoftwordzz",
