--- a/src/NBsoft.Wordzz/appsettings.json
+++ b/src/NBsoft.Wordzz/appsettings.json
@@ -11,6 +11,9 @@
     "ApiKey": "",
     "EncryptionKey": "",
     "ServerId": "",
+    "DictionaryApiUrl": "",
+    "DictionaryApiAppId": "",
+    "DictionaryApiKey": "",
     "Db": {
       "DbType": "",
       "LogConnString": "",
