--- a/src/NBsoft.Wordzz/NBsoft.Wordzz.csproj
+++ b/src/NBsoft.Wordzz/NBsoft.Wordzz.csproj
@@ -10,7 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Hosting.WindowsServices" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
     <PackageReference Include="MySql.Data" Version="8.0.19" />
-    <PackageReference Include="NBsoft.Logs" Version="2.0.5" />
+    <PackageReference Include="NBsoft.Logs" Version="2.0.7" />
+    <PackageReference Include="NBsoft.Logs.MySql" Version="2.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
