Implemented Game, Board and Stats repositories

--- a/src/NBsoft.Wordzz/appsettings.Development.json
+++ b/src/NBsoft.Wordzz/appsettings.Development.json
@@ -17,7 +17,8 @@
       "DbType": "MySql",
       "LogConnString": "Server=HADES;Port=3306;Uid=root;Pwd=na123456;Database=nbsoftwordzz",
       "MainConnString": "Server=HADES;Port=3306;Uid=root;Pwd=na123456;Database=nbsoftwordzz;",
-      "SessionConnString": "Server=HADES;Port=3306;Uid=root;Pwd=na123456;Database=nbsoftwordzz;"
+      "SessionConnString": "Server=HADES;Port=3306;Uid=root;Pwd=na123456;Database=nbsoftwordzz;",
+      "StatsConnString": "Server=HADES;Port=3306;Uid=root;Pwd=na123456;Database=nbsoftwordzz;"
     }
   }
 }
