--- a/src/NBsoft.Wordzz/appsettings.json
+++ b/src/NBsoft.Wordzz/appsettings.json
@@ -18,7 +18,8 @@
       "DbType": "",
       "LogConnString": "",
       "MainConnString": "",
-      "SessionConnString": ""
+      "SessionConnString": "",
+      "StatsConnString": ""
     }
   }
 
