--- a/src/Wordzz/appsettings.Development.json
+++ b/src/Wordzz/appsettings.Development.json
@@ -15,10 +15,10 @@
     "DictionaryApiKey": "0b99529816f386c8a9ff589fb27fe74a",
     "Db": {
       "DbType": "MySql",
-      "LogConnString": "Server=HADES;Port=3306;Uid=root;Pwd=na123456;Database=nbsoftwordzz",
-      "MainConnString": "Server=HADES;Port=3306;Uid=root;Pwd=na123456;Database=nbsoftwordzz;",
-      "SessionConnString": "Server=HADES;Port=3306;Uid=root;Pwd=na123456;Database=nbsoftwordzz;",
-      "StatsConnString": "Server=HADES;Port=3306;Uid=root;Pwd=na123456;Database=nbsoftwordzz;"
+      "LogConnString": "Server=localhost;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz",
+      "MainConnString": "Server=localhost;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz;",
+      "SessionConnString": "Server=localhost;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz;",
+      "StatsConnString": "Server=localhost;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz;"
     }
   }
 }
