--- a/src/Wordzz/Wordzz.csproj
+++ b/src/Wordzz/Wordzz.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>NBsoft.Wordzz</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
