Updated Docker file

--- a/src/Wordzz/Wordzz.csproj
+++ b/src/Wordzz/Wordzz.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>NBsoft.Wordzz</RootNamespace>
+    <Version>1.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
