Implemented IDictionaryApi and added DicionarioAberto for PT language

--- a/src/Wordzz/appsettings.Development.json
+++ b/src/Wordzz/appsettings.Development.json
@@ -10,15 +10,27 @@
     "ApiKey": "localWordzzSrv",
     "EncryptionKey": "90E7D584-31F4-4099-8180-0E44B2B72CA3",
     "ServerId": "localnemdevserver",
-    "DictionaryApiUrl": "https://od-api.oxforddictionaries.com/api/v2",
-    "DictionaryApiAppId": "1bc24224",
-    "DictionaryApiKey": "0b99529816f386c8a9ff589fb27fe74a",
+    "Dictionaries": [
+      {
+        "Type": "OxfordDictionaries",
+        "Language": "en-US",
+        "ApiUrl": "https://od-api.oxforddictionaries.com/api/v2",
+        "ApiAppId": "1bc24224",
+        "ApiKey": "0b99529816f386c8a9ff589fb27fe74a"
+      },
+      {
+        "Type": "DicionarioAberto",
+        "Language": "pt-PT",
+        "ApiUrl": "https://api.dicionario-aberto.net",
+        "ApiAppId": "",
+        "ApiKey": ""
+      }],
     "Db": {
       "DbType": "MySql",
-      "LogConnString": "Server=localhost;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz",
-      "MainConnString": "Server=localhost;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz;",
-      "SessionConnString": "Server=localhost;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz;",
-      "StatsConnString": "Server=localhost;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz;"
+      "LogConnString": "Server=nem;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz",
+      "MainConnString": "Server=nem;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz;",
+      "SessionConnString": "Server=nem;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz;",
+      "StatsConnString": "Server=nem;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz;"
     }
   }
 }
