--- a/src/Wordzz/appsettings.json
+++ b/src/Wordzz/appsettings.json
@@ -11,9 +11,22 @@
     "ApiKey": "testWordzzSrv",
     "EncryptionKey": "6A8BFF1D-C6EC-4A0A-BF54-C2C566B65683",
     "ServerId": "testserver",
-    "DictionaryApiUrl": "https://od-api.oxforddictionaries.com/api/v2",
-    "DictionaryApiAppId": "1bc24224",
-    "DictionaryApiKey": "0b99529816f386c8a9ff589fb27fe74a",
+    "Dictionaries": [
+      {
+        "Type": "OxfordDictionaries",
+        "Language": "en-US",
+        "ApiUrl": "https://od-api.oxforddictionaries.com/api/v2",
+        "ApiAppId": "1bc24224",
+        "ApiKey": "0b99529816f386c8a9ff589fb27fe74a"
+      },
+      {
+        "Type": "DicionarioAberto",
+        "Language": "pt-PT",
+        "ApiUrl": "https://api.dicionario-aberto.net",
+        "ApiAppId": "",
+        "ApiKey": ""
+      }
+    ],
     "Db": {
       "DbType": "MySql",
       "LogConnString": "Server=mysql8;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz",
