Bug fixes in DicionarioAbertoApi

--- a/src/Wordzz/appsettings.Development.json
+++ b/src/Wordzz/appsettings.Development.json
@@ -27,10 +27,10 @@
       }],
     "Db": {
       "DbType": "MySql",
-      "LogConnString": "Server=nem;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz",
-      "MainConnString": "Server=nem;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz;",
-      "SessionConnString": "Server=nem;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz;",
-      "StatsConnString": "Server=nem;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz;"
+      "LogConnString": "Server=localhost;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz",
+      "MainConnString": "Server=localhost;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz;",
+      "SessionConnString": "Server=localhost;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz;",
+      "StatsConnString": "Server=localhost;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz;"
     }
   }
 }
