Added setting to disable lexicon service cache

--- a/src/Wordzz/appsettings.json
+++ b/src/Wordzz/appsettings.json
@@ -11,6 +11,7 @@
     "ApiKey": "testWordzzSrv",
     "EncryptionKey": "6A8BFF1D-C6EC-4A0A-BF54-C2C566B65683",
     "ServerId": "testserver",
+    "UseLexiconCache": false,
     "Dictionaries": [
       {
         "Type": "OxfordDictionaries",
