--- a/src/Wordzz/appsettings.Development.json
+++ b/src/Wordzz/appsettings.Development.json
@@ -10,6 +10,7 @@
     "ApiKey": "localWordzzSrv",
     "EncryptionKey": "90E7D584-31F4-4099-8180-0E44B2B72CA3",
     "ServerId": "localnemdevserver",
+    "UseLexiconCache": true,
     "Dictionaries": [
       {
         "Type": "OxfordDictionaries",
@@ -24,7 +25,8 @@
         "ApiUrl": "https://api.dicionario-aberto.net",
         "ApiAppId": "",
         "ApiKey": ""
-      }],
+      }
+    ],
     "Db": {
       "DbType": "MySql",
       "LogConnString": "Server=localhost;Port=3306;Uid=root;Pwd=ChaosKitten_69;Database=nbsoftwordzz",
