--- a/src/Wordzz/appsettings.Development.json
+++ b/src/Wordzz/appsettings.Development.json
@@ -10,7 +10,7 @@
     "ApiKey": "localWordzzSrv",
     "EncryptionKey": "90E7D584-31F4-4099-8180-0E44B2B72CA3",
     "ServerId": "localnemdevserver",
-    "UseLexiconCache": true,
+    "UseLexiconCache": false,
     "Dictionaries": [
       {
         "Type": "OxfordDictionaries",
